tdf#126395 writerfilter: don't guess table direction

Both ooxmlexport and rtfexport have a table-rtf test
which ensure bidiVisual is properly applied to tables.

If that value is not specified, then do NOT guess
at the table direction on import.
I can see that it makes sense to guess as a user
function, but import defaults are rather specific.

Change-Id: I1cabf518937e57dd757aca75ae5d2527c61fa736